--- a/index.html
+++ b/index.html
@@ -126,13 +126,28 @@
 
         <!-- Video Bölümü (iframe ile) -->
         <div class="video">
-            <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%">
-                <iframe allow="fullscreen;autoplay" allowfullscreen height="100%" 
-                        src="https://streamable.com/e/us3d28?autoplay=1" 
-                        width="100%" 
-                        style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;">
-                </iframe>
-            </div>
+            
+Embed video
+<div style="position:relative; width:100%; height:0px; padding-bottom:56.250%">
+    <iframe allow="fullscreen;autoplay" allowfullscreen height="100%" 
+        src="https://streamable.com/e/n2s8m3?autoplay=1" 
+        width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;">
+        </iframe>
+</div>
+
+
+Embed options
+
+
+Loop
+
+Autoplay
+
+Mute audio
+
+Show player controls
+
+
         </div>
 
         <!-- Yorum Platformlarının Logoları ve Puanları -->
