--- a/index.html
+++ b/index.html
@@ -129,11 +129,24 @@
             
 Embed video
 <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%">
-    <iframe allow="fullscreen;autoplay" allowfullscreen height="100%" 
-        src="https://streamable.com/e/n2s8m3?autoplay=1" 
-        width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;">
-        </iframe>
-</div>
+    
+Embed video
+<div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"><iframe allow="fullscreen;autoplay" allowfullscreen height="100%" src="https://streamable.com/e/n2s8m3?autoplay=1" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div>
+    </div>
+
+
+Embed options
+
+
+Loop
+
+Autoplay
+
+Mute audio
+
+Show player controls
+
+
 
 
 Embed options
